adjusted singles page

--- a/src/App.css
+++ b/src/App.css
@@ -585,9 +585,9 @@ a:hover {
     /* margin-top: 20%; */
 }
 
-.poison-player {
-    margin-top: -55%;
-}
+/* .poison-player {
+
+} */
 
 .poison-player2 {
     margin-top: -55%;
