--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,6 @@ body {
   margin: 0 auto;
 }
 
-/* #spotify {
-    width: 30%;
-    margin: 0 auto;
-    margin-top: 5%;
-} */
 
 .logos {
   margin-top: 20px;
@@ -90,7 +85,7 @@ header {
   padding-left: 4%;
 }
 
-.here-at-last {
+/* .here-at-last {
   margin-top: 40%;
 }
 
@@ -108,7 +103,7 @@ header {
 
 .with-you {
   margin-top: 40%;
-}
+} */
 
 .instruments {
   text-align: center;
@@ -123,8 +118,6 @@ header {
 
 .bio {
   width: 80%;
-  /* margin-left: 10%;
-    margin-top: 4%; */
   margin: 4% 10% 10% 10%;
   text-align: center;
   font-size: 25px;
@@ -144,13 +137,11 @@ header {
     font-size: 15px;
   }
 
-  .player {
-    width: 75%;
   }
   h2 {
     font-size: large;
   }
-  .apologize {
+  /* .apologize {
     margin-top: 70%;
   }
   .trouble {
@@ -176,14 +167,10 @@ header {
   }
   .with-you {
     margin-top: 60%;
-  }
-}
+  } */
 
-@media screen and (max-width: 1400px) {
-  .instruments {
-    font-size: 18px;
-  }
-}
+
+
 
 @media screen and (max-width: 500px) {
   .instruments {
@@ -1039,4 +1026,14 @@ nav div.container button {
 
 div.nav-item.show.dropdown a {
     color: black;
+}
+
+/*End mobile nav update*/
+
+div.nav-item a {
+    color: white;
+}
+
+div#mini-songs-container, div#commissions-container, div#videos-container {
+    margin-bottom: 100px;
 }
